--- a/monStyle.css
+++ b/monStyle.css
@@ -1,4 +1,4 @@
-body { columns: 2; margin:100px 10px 10px 10px; }
+body { background-color: #00aa00; columns: 2; margin:100px 10px 10px 10px; }
 td { text-align: center; } 
 .TM {
 	background-color: #dddddd;
