--- a/monStyle.css
+++ b/monStyle.css
@@ -1,4 +1,5 @@
 body { background-color: #00aa00; columns: 2; margin:100px 10px 10px 10px; }
+h1 { color: red; }
 td { text-align: center; } 
 .TM {
 	background-color: #dddddd;
