--- a/monStyle.css
+++ b/monStyle.css
@@ -1,5 +1,7 @@
 body { background-color: #00aa00; columns: 2; margin:100px 10px 10px 10px; }
 h1 { font-size: 50px; color: red; }
+h1:after {content:"";display:block;position:relative;top:.33em;border-bottom:5px solid hsla(0,0
+%,50%,.33)}
 td { text-align: center; } 
 .TM {
 	background-color: #dddddd;
